rewrite cv, second attempt

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/cv/:path*",
-      "destination": "https://cv-kduhz82ad-karooolis.vercel.app/:path*"
+      "source": "/cv/(.*)",
+      "destination": "https://cv-kduhz82ad-karooolis.vercel.app/$1"
     }
   ]
 }
