--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/cv",
-      "destination": "https://cv.krl.is/"
-    }
+    { "source": "/cv/(.*)", "destination": "https://cv-one-nu.vercel.app/$1" }
   ]
 }
